<resources>
    <string name="app_name">SistemaCompraVenta_V2</string>
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>
    <string name="home">Principal</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="buscarProducto">Buscar Producto</string>
    <string name="perfil">Perfil</string>
    <string name="domicilio">Domicilios</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="carritoCompra">Carrito Compra</string>
    <string name="favoritos">Favoritos</string>
    <string name="historial">Historial</string>
    <string name="pedidos">Pedidos</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="contenidoImagen">Publicacion</string>
    <string name="tituloText">Titulo</string>
    <string name="descripcionText">Descripcion</string>
    <string name="precioText">Precio</string>
    <string name="fecha_transaccion_card">Fecha de Transaccion:</string>
    <string name="total_transaccion_card">Total:</string>
    <string name="calle_titulo">Calle</string>
    <string name="colonia_card_text">Colonia</string>
    <string name="sistema_cv">Sistema de Compra Venta</string>
    <string name="mensaje_bienvenida">Bienvenido!</string>
    <string name="cerrando_sesion">Cerrando Sesion...</string>
    <string name="usuario_field">Usuario</string>
    <string name="iniciar_sesion_boton">Iniciar Sesion</string>
    <string name="registro">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="sesion_iniciada">Ya hay una sesion abierta.</string>
    <string name="texto_relleno">Principal</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="register_layout_title">Registro de Usuario</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="realizarRegistro">Realizar Registro</string>
    <string name="agregar_carrito_button">Agregar a Carrito</string>
    <string name="agregar_favoritos_button">Agregar a Favoritos</string>
    <string name="realizar_pregunta_button">Realizar Pregunta</string>
    <string name="no_hay_datos">No hay datos que mostrar.</string>
    <string name="precio_detalles">Precio:</string>
    <string name="calificacion_detalles">Calificacion:</string>
    <string name="cantidad_detalles">Cantidad:</string>
    <string name="inicio_sesion_requerida">Debes iniciar sesion para poder realizar esta accion.</string>
    <string name="crear_publicacion_titulo">Publicar Producto</string>
    <string name="nombre_crear_publicacion">Nombre del producto...</string>
    <string name="descripcion_crear_publicacion">Descripción del producto...</string>
    <string name="categoria_crear_publicacion">Categoria del producto...</string>
    <string name="precio_crear_publicacion">Precio del producto...</string>
    <string name="cantidad_crear_publicacion">Cantidad disponible...</string>
    <string name="unidad_crear_publicacion">Unidad del producto...</string>
    <string name="publicar_producto_button">Publicar</string>
    <string name="nombre_publicacion_invalido">El nombre no es valido</string>
    <string name="descripcion_publicacion_invalido">La descripcion no es valida</string>
    <string name="categoria_publicacion_invalido">La categoria no es valida</string>
    <string name="precio_publicacion_invalido">El precio no es valido</string>
    <string name="cantidad_publicacion_invalido">La cantidad no es valida</string>
    <string name="unidad_publicacion_invalido">La unidad no es valida</string>
    <string name="revisar_datos_introducidos_publicacion">Revisa la informacion introducida.</string>
    <string name="precio_carrito">Precio:</string>
    <string name="calificacion_carrito">Calificacion:</string>
    <string name="cantidad_carrito">Cantidad:</string>
    <string name="eliminar_carrito_button">Eliminar de Carrito de Compras</string>
    <string name="crear_publicacion_button">Publicar Producto</string>
    <string name="ver_publicaciones_button">Ver Publicaciones Actuales</string>
    <string name="eliminar_publicacion_usuario_button">Eliminar Publicación</string>
    <string name="usuario_ya_existe">El usuario ya existe.</string>
    <string name="usuario_creado_exito">El usuario fue creado exitosamente.</string>
    <string name="login_exitoso">Inicio de sesión exitosa</string>
    <string name="login_fracaso">Sucedio un error al momento de iniciar sesión o el usuario no existe.</string>
    <string name="usuario_no_encontrado">No se encontro el usuario especificado.</string>
    <string name="clave_usuario_no_encontrada">No se encontro el usuario con la clave especificada.</string>
    <string name="actualizacion_exitosa">Actualización de datos exitosa.</string>
    <string name="actualizacion_fracaso">No se pueden actualizar sus datos en este momento. Inténtelo más tarde.</string>
    <string name="eliminacion_exitosa">Tu cuenta se ha eliminado de manera exitosa.</string>
    <string name="eliminacion_fracaso">No se pudo eliminar su cuenta en este momento. Inténtelo más tarde.</string>
    <string name="publicaciones_no_encontradas">No se encontraron publicaciones o ocurrio un error.</string>
    <string name="agregar_favorito_exitoso">Se agrego exitosamente a la lista de favoritos.</string>
    <string name="agregar_favorito_fracaso">La publicación ya esta en la lista de favoritos o ocurrio un error.</string>
    <string name="agregar_carrito_exitoso">Se agrego exitosamente al carrito de compras.</string>
    <string name="agregar_carrito_fracaso">La publicación ya esta en el carrito de compra o ocurrio un error.</string>
    <string name="eliminar_articulo_carrito_exito">Se eliminó el articulo del carrito.</string>
    <string name="eliminar_articulo_carrito_fracaso">No se pudo eliminar el articulo del carrito.</string>
    <string name="eliminar_articulo_favorito_exito">Se eliminó el articulo de tus favoritos exitosamente.</string>
    <string name="eliminar_articulo_favorito_fracaso">No se pudo eliminar el articulo de tus favoritos.</string>
    <string name="agregar_evaluacion_exito">La evaluación ha sido enviada de manera exitosa.</string>
    <string name="agregar_evaluacion_fracaso">No se pudo mandar la evaluación.</string>
    <string name="agregar_domicilio_exito">Se ha creado el domicilio exitosamente</string>
    <string name="agregar_domicilio_fracaso">No se pudo crear el domicilio. Inténtelo mas tarde.</string>
    <string name="domicilios_no_encontrados">No se encontraron domicilios.</string>
    <string name="eliminar_domicilio_exito">Se ha eliminado el domicilio exitosamente.</string>
    <string name="eliminar_domicilio_fracaso">No se pudo eliminar el domicilio.</string>
    <string name="crear_publicacion_exito">Se ha publicado el producto de manera exitosa.</string>
    <string name="crear_publicacion_fracaso">No se pudo publicar el producto.</string>
    <string name="eliminar_publicacion_exito">Se ha eliminado la publicación de manera exitosa</string>
    <string name="eliminar_publicacion_fracaso">No se pudo eliminar la publicación.</string>
    <string name="agregar_transaccion_exito">Se realizo el pedido con exito.</string>
    <string name="agregar_transaccion_fracaso">No se pudo realizar el pedido.</string>
    <string name="favoritos_no_encontrados">No tienes favoritos guardados.</string>
    <string name="nombres_invalidos">Los nombres introducidos no son validos.</string>
    <string name="apellidos_invalidos">Los apellidos introducidos no son validos.</string>
    <string name="usuario_invalido">El usuario introducido no es valido.</string>
    <string name="telefono_invalido">El telefono introducido no es valido.</string>
    <string name="contrasena_invalida">La contrasena introducida no es valida.</string>
    <string name="contrasenas_no_coinciden">Las contrasenas no coinciden.</string>
    <string name="correo_invalido">El correo introducido no es valido.</string>
    <string name="modificar_datos_button">Modificar Datos personales</string>
    <string name="agregar_domicilio_button">Agregar Domicilio</string>
    <string name="perfil_imageview">perfil_image</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="eliminar_favorito_button">Eliminar de Favoritos</string>
    <string name="clave_transaccion">Clave Transaccion:</string>
    <string name="clave_vendedor">Clave de Vendedor:</string>
    <string name="fecha_venta">Fecha de Venta:</string>
    <string name="total_transaccion">Precio Total:</string>
    <string name="evaluar_usuario_button">Evaluar Usuario</string>
    <string name="usuario_ya_esta_evaluado">Ya has evaluado el usuario.</string>
    <string name="evaluacion_titulo">Evaluacion de Usuario</string>
    <string name="evaluacion_contenido">Introduce su evaluacion...</string>
    <string name="evaluacion_calificacion">Calificacion:</string>
    <string name="mandar_evaluacion_boton">Mandar Evaluacion</string>
    <string name="evaluacion_ya_fue_enviada">La evaluacion ya fue enviada.</string>
    <string name="seleccionar_calificacion">Seleccione la calificación:</string>
    <string name="modificar_datos_titulo">Modificar Datos Personales</string>
    <string name="modificar_datos_personales_button">Modificar Datos</string>
    <string name="cancelar_button">Cancelar</string>
    <string name="articulos_carrito">Ver Articulos en Carrito</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="titulo_carrito">Carrito de Compras</string>
    <string name="subtotal_carrito">Subtotal:</string>
    <string name="numero_articulos_carrito">Numero de Articulos:</string>
    <string name="carrito_vacio">No tienes artículos en tu carrito de compras.</string>
    <string name="titulo_actividad_pedidos">Pedido Final</string>
    <string name="cantidad_articulos_pedido">Cantidad de Artículos:</string>
    <string name="subtotal_pedidos">Subtotal:</string>
    <string name="mandar_pedido_button">Mandar Pedido</string>
    <string name="calle_visualizar">Calle:</string>
    <string name="colonia_visualizar">Colonia:</string>
    <string name="municipio_visualizar">Municipio:</string>
    <string name="codigo_visualizar">Código Postal:</string>
    <string name="estado_visualizar">Estado:</string>
    <string name="numinterno_visualizar">Número Interno:</string>
    <string name="numexterno_visualizar">Número Externo:</string>
    <string name="descripcion_visualizar">Descripción:</string>
    <string name="eliminar_domicilio_button">Eliminar Domicilio</string>
    <string name="domicilio_vacio_visualizar">No hay domicilios para eliminar.</string>
    <string name="titulo_crear_domicilio">Crear Domicilio</string>
    <string name="calle_input">Calle...</string>
    <string name="colonia_input">Colonia...</string>
    <string name="municipio_input">Municipio...</string>
    <string name="codigo_postal_input">Código Postal...</string>
    <string name="estado_input">Estado...</string>
    <string name="numero_interno_input">Número interno...</string>
    <string name="numero_externo_input">Número externo...</string>
    <string name="descripcion_input">Descripción...</string>
    <string name="calle_invalid">La calle no es valida</string>
    <string name="colonia_invalid">La colonia no es valida</string>
    <string name="municipio_invalid">El municipio no valido</string>
    <string name="estado_invalid">El estado no es valido</string>
    <string name="codigo_postal_invalid">El codigo postal no es valido</string>
</resources>