<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/non_user_nav_menu">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home">

        </item>

        <item
            android:id="@+id/iniciarSesion"
            android:icon="@drawable/ic_baseline_iniciarsesion_24"
            android:title="@string/iniciarSesion">

        </item>

        <item
            android:id="@+id/buscarProducto"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/buscarProducto">

        </item>

    </group>

</menu>